# backend/src/entities/mod.rs
@@ -15,6 +15,7 @@ pub mod instruments;
 pub mod news_item;
 pub mod news_strategy_link;
 pub mod note;
+pub mod note_hypothesis;
 pub mod note_ref;
 pub mod rss_feed;
 pub mod sea_orm_active_enums;
@@ -27,6 +28,7 @@ pub mod strategy_task;
 pub mod strategy_task_step;
 pub mod theme;
 pub mod trade;
+pub mod trade_note;
 pub mod trigger;
 pub mod watchlist_items;
 pub mod watchlists;
