# backend/src/entities/note_hypothesis.rs
@@ -1,0 +1,58 @@
+//! `SeaORM` Entity, @generated by sea-orm-codegen 2.0
+
+use sea_orm::entity::prelude::*;
+use serde::{Deserialize, Serialize};
+
+#[derive(
+    Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize, utoipa :: ToSchema,
+)]
+#[sea_orm(table_name = "note_hypothesis")]
+#[schema(as = NoteHypothesis)]
+pub struct Model {
+    #[sea_orm(primary_key, auto_increment = false)]
+    pub note_id: Uuid,
+    #[sea_orm(primary_key, auto_increment = false)]
+    pub hypothesis_id: Uuid,
+    #[sea_orm(column_type = "Text")]
+    pub hypothesis_title: String,
+    #[sea_orm(column_type = "Text")]
+    pub hypothesis_body: String,
+    #[sea_orm(column_type = "Text")]
+    pub hypothesis_status: String,
+    #[schema(value_type = chrono::DateTime<chrono::Utc>)]
+    pub created_at: DateTimeWithTimeZone,
+}
+
+#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
+pub enum Relation {
+    #[sea_orm(
+        belongs_to = "super::hypothesis::Entity",
+        from = "Column::HypothesisId",
+        to = "super::hypothesis::Column::HypothesisId",
+        on_update = "NoAction",
+        on_delete = "Cascade"
+    )]
+    Hypothesis,
+    #[sea_orm(
+        belongs_to = "super::note::Entity",
+        from = "Column::NoteId",
+        to = "super::note::Column::Id",
+        on_update = "NoAction",
+        on_delete = "Cascade"
+    )]
+    Note,
+}
+
+impl Related<super::hypothesis::Entity> for Entity {
+    fn to() -> RelationDef {
+        Relation::Hypothesis.def()
+    }
+}
+
+impl Related<super::note::Entity> for Entity {
+    fn to() -> RelationDef {
+        Relation::Note.def()
+    }
+}
+
+impl ActiveModelBehavior for ActiveModel {}
