# backend/src/entities/prelude.rs
@@ -13,6 +13,7 @@ pub use super::instruments::Entity as Instruments;
 pub use super::news_item::Entity as NewsItem;
 pub use super::news_strategy_link::Entity as NewsStrategyLink;
 pub use super::note::Entity as Note;
+pub use super::note_hypothesis::Entity as NoteHypothesis;
 pub use super::note_ref::Entity as NoteRef;
 pub use super::rss_feed::Entity as RssFeed;
 pub use super::sector::Entity as Sector;
@@ -24,6 +25,7 @@ pub use super::strategy_task::Entity as StrategyTask;
 pub use super::strategy_task_step::Entity as StrategyTaskStep;
 pub use super::theme::Entity as Theme;
 pub use super::trade::Entity as Trade;
+pub use super::trade_note::Entity as TradeNote;
 pub use super::trigger::Entity as Trigger;
 pub use super::watchlist_items::Entity as WatchlistItems;
 pub use super::watchlists::Entity as Watchlists;
